--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -216,3 +216,18 @@ button {
     font-size: 16px;
   }
 }
+
+.strikethrough-diagonal {
+  &:before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 45%;
+    right: 0;
+    border-top: 1px solid;
+    border-color: red;
+    -webkit-transform: skewY(-10deg);
+    -moz-transform: skewY(-10deg);
+    transform: skewY(-10deg);
+  }
+}
